<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_navigation_chat"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/tab_title_chat" />

    <item
        android:id="@+id/bottom_navigation_group"
        android:icon="@drawable/ic_baseline_group_24"
        android:title="@string/tab_title_group" />

    <item
        android:id="@+id/bottom_navigation_calls"
        android:icon="@drawable/ic_call_white_24dp"
        android:title="@string/tab_title_call" />

    <!--    <item-->
    <!--        android:id="@+id/bottom_navigation_contacts"-->
    <!--        android:icon="@drawable/ic_person_black_24dp"-->
    <!--        android:title="@string/contacts" />-->

    <item
        android:id="@+id/bottom_navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />

</menu>