<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:textColor="@color/colorOnSurface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="@dimen/tenDp"
        android:text="@string/chooseTheme"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radioDarkGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">

        <RadioButton
            android:id="@+id/radioButtonSystemDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/five_dp"
            android:buttonTint="@color/colorOnSurface"
            android:paddingHorizontal="@dimen/tenDp"
            android:text="@string/systemDefault"
            android:textColor="@color/colorOnSurface"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButtonDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/five_dp"
            android:buttonTint="@color/colorOnSurface"
            android:paddingHorizontal="@dimen/tenDp"
            android:text="@string/darkTheme"
            android:textColor="@color/colorOnSurface"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButtonLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/five_dp"
            android:buttonTint="@color/colorOnSurface"
            android:paddingHorizontal="@dimen/tenDp"
            android:text="@string/lightTheme"
            android:textColor="@color/colorOnSurface"
            android:textSize="16sp" />

    </RadioGroup>

    <LinearLayout
        android:layout_marginBottom="@dimen/tenDp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancelText"
            android:layout_width="85sp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_dark"
            android:layout_margin="10dp"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:focusable="true"
            android:padding="@dimen/five_dp"
            android:text="@android:string/cancel"
            android:textColor="@color/quantum_white_100"
            android:textSize="18sp" />

        <TextView
            android:textColor="@color/quantum_white_100"
            android:id="@+id/okayText"
            android:gravity="center_horizontal"
            android:background="@drawable/round_blue"
            android:layout_width="85sp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/tenDp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/five_dp"
            android:text="@string/okay"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>