<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="32dp">

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/countryCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/countryCodeDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/countryCode"
        android:layout_marginBottom="24dp"
        android:background="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/countryCodeDivider"
        android:background="@null"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:maxLines="1"
        android:textColor="@color/colorOnSurface"
        android:textColorHint="@color/colorOnSurface"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/phoneNumber"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/message_otp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/round_blue"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/confirm"
        android:textColor="#ffff"
        android:textSize="18sp" />
</RelativeLayout>