<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main_orange">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/chatToolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:tint="@color/quantum_white_100"
                    app:srcCompat="@drawable/ic_keyboard_arrow_left_white_36dp" />

                <TextView
                    android:id="@+id/selectedCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="5"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/chatToolbarContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:visibility="visible">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/users_image"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:transitionName="userImage"
                    app:srcCompat="@drawable/avatar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/callAudio"
                    android:layout_toLeftOf="@+id/callAudio"
                    android:layout_toEndOf="@+id/users_image"
                    android:layout_toRightOf="@+id/users_image"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/emotion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:text="Emotion"
                        android:visibility="gone"
                        android:textColor="@color/quantum_grey400" />

                    <TextView
                        android:id="@+id/user_name"
                        style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:clickable="true"
                        android:focusable="true"
                        android:singleLine="true"
                        android:text="Name"
                        android:textColor="@color/quantum_white_100" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/callAudio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toStartOf="@+id/callVideo"
                    android:layout_toLeftOf="@+id/callVideo"
                    android:padding="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:tint="@color/iconColor"
                    app:srcCompat="@drawable/ic_call_white_24dp" />

                <ImageView
                    android:id="@+id/callVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:tint="@color/iconColor"
                    android:clickable="true"
                    android:focusable="true"
                    app:srcCompat="@drawable/ic_videocam_white_24dp" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingHorizontal="2dp"
        android:paddingVertical="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="2dp"
        android:background="@color/main_orange" />
    <LinearLayout
        android:id="@+id/sendContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingVertical="4sp"
        android:paddingRight="8dp">

        <ImageView
            android:id="@+id/attachment_emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_insert_emoticon_gray_40dp" />

        <ImageView
            android:id="@+id/attach_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_attach_location" />

        <com.vanniktech.emoji.EmojiEditText
            android:id="@+id/new_message"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:hint="@string/type_your_message"
            android:paddingStart="10dp"
            android:paddingTop="14dp"
            android:paddingBottom="16dp"
            android:textColor="@color/colorOnSurface"
            android:textSize="16sp"
            app:emojiSize="@dimen/emoji_icon_size" />

        <ImageView
            android:id="@+id/add_attachment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"

            android:foregroundTint="@android:color/white"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_image_gallery" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="8sp"
            android:elevation="6sp"
            android:background="@drawable/send_button_background"
            >
            <ImageView
                android:id="@+id/send"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="6sp"
                android:paddingHorizontal="10sp"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/ic_microphone" />
        </LinearLayout>


    </LinearLayout>


    <TableLayout
        android:id="@+id/add_attachment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSurface"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:stretchColumns="1,2,3"
        android:visibility="gone">

        <TableRow>

            <TextView
                android:id="@+id/attachment_gallery"
                android:layout_column="1"
                android:drawableTop="@drawable/ic_image"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text="@string/image"
                android:textColor="@color/colorOnSurface" />

            <TextView
                android:id="@+id/attachment_audio"
                android:layout_column="2"
                android:drawableTop="@drawable/ic_headset"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text="@string/audio"
                android:textColor="@color/colorOnSurface" />

            <TextView
                android:id="@+id/attachment_video"
                android:layout_column="3"
                android:drawableTop="@drawable/ic_videocam_black_40dp"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text="@string/video"
                android:textColor="@color/colorOnSurface" />

        </TableRow>

        <TableRow android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/attachment_contact"
                android:layout_column="1"
                android:drawableTop="@drawable/ic_contact_perm"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text="@string/contact"
                android:textColor="@color/colorOnSurface" />

            <TextView
                android:id="@+id/attachment_location"
                android:layout_column="2"
                android:drawableTop="@drawable/ic_location"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text="@string/location"
                android:textColor="@color/colorOnSurface" />

            <TextView
                android:id="@+id/attachment_document"
                android:layout_column="3"
                android:drawableTop="@drawable/ic_insert"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text="@string/document"
                android:visibility="gone" />

        </TableRow>

    </TableLayout>


</LinearLayout>